--- a/hw1/style.css
+++ b/hw1/style.css
@@ -6,11 +6,15 @@
 .album_title{
     font-size: 1.5cm;
     color: #5a5a5a;
+    text-align: center;
 }
 .photo_section{
     width: 100%;
     height: 350px;
     margin-top: 1%;
+    background-color: rgba(48, 48, 48, 0.8);
+}
+.photo_section:hover{
     background-color: rgba(48, 48, 48, 0.8);
 }
 .view_box{
@@ -19,13 +23,19 @@
     height: 100%;
     margin-left: 20%;
 }
+.view_box:hover{
+    background-color: #beeec0a1;
+    width: 62%;
+    height: 102%;
+    margin-left: 19%;
+}
 .image_fitting{
     width: 100%;
     height: 100%
 }
 .photo_section_2{
     width: 100%;
-    height: 120px;
+    height: 160px;
     margin-top: 1%;
     background-color: rgba(133, 133, 133, 1);
 }
