--- a/hw1/style.css
+++ b/hw1/style.css
@@ -1,21 +1,23 @@
 .top_section{
     width: 100%;
     height: 1.8cm;
-    background-color: rgba(0, 0, 0, 0.2);
+    background: linear-gradient(#aceeff, #000000);
+    box-shadow: 1px 1px 2px gray;
+    border: #413d52 2px solid;
 }
 .album_title{
     font-size: 1.5cm;
-    color: #5a5a5a;
+    color: #ffffff;
     text-align: center;
+    text-shadow: 1px 1px 2px gray;
 }
 .photo_section{
     width: 100%;
     height: 350px;
     margin-top: 1%;
-    background-color: rgba(48, 48, 48, 0.8);
-}
-.photo_section:hover{
-    background-color: rgba(48, 48, 48, 0.8);
+    background-color: rgba(48, 48, 48, 0.3);
+    box-shadow: 1px 1px 2px gray;
+    border: #413d52 2px solid;
 }
 .view_box{
     background-color: #beeec0a1;
@@ -37,11 +39,13 @@
     width: 100%;
     height: 160px;
     margin-top: 1%;
-    background-color: rgba(133, 133, 133, 1);
+    background: linear-gradient(#aceeff, #000000);
+    box-shadow: 1px 1px 2px gray;
+    border: #16151a 2px solid;
 }
 .photo_section_2:hover{
     width: 110%;
-    background-color: rgba(48, 48, 48, 0.8);
+    background: linear-gradient(#b4f0ff75, #0000007e);
 }
 .row {
     --bs-gutter-x: 1.5rem;
