--- a/hw2/styles.css
+++ b/hw2/styles.css
@@ -48,17 +48,29 @@
     height: 100%
 }
 .photo_section_2{
-    width: 100%;
+    width: 90%;
+    margin-left: 5%;
     height: 160px;
     margin-top: 5%;
-    background: linear-gradient(#aceeff, #000000);
+    background: linear-gradient(#aceeff, #000000); 
     box-shadow: 1px 1px 2px gray;
     border: #16151a 2px solid;
 }
 .photo_section_2:hover{
-    width: 101%;
+    width: 91%;
     background: linear-gradient(#b4f0ff75, #0000007e);
 }
+.switch_button{
+    width: 10%;
+    margin-left: 2%;
+    margin-top: 10%;
+    height: 50px;
+    border: solid 2px black;
+    background-color: white;
+    position: absolute;
+    display: block;
+}
+
 .row {
     --bs-gutter-x: 1.5rem;
     --bs-gutter-y: 0;
