--- a/hw2/styles.css
+++ b/hw2/styles.css
@@ -60,9 +60,19 @@
     width: 91%;
     background: linear-gradient(#b4f0ff75, #0000007e);
 }
-.switch_button{
+.switch_button_left{
     width: 10%;
     margin-left: 2%;
+    margin-top: 10%;
+    height: 50px;
+    border: solid 2px black;
+    background-color: white;
+    position: absolute;
+    display: block;
+}
+.switch_button_right{
+    width: 10%;
+    margin-left: 88%;
     margin-top: 10%;
     height: 50px;
     border: solid 2px black;
