--- a/hw2/styles.css
+++ b/hw2/styles.css
@@ -81,6 +81,63 @@
     display: block;
 }
 
+.album_menu{
+    height: 0%;
+    width: 0%;
+    background-color: white;
+    border: solid 0px black;
+    z-index: 9999;
+    position: absolute;
+}
+.menu_shrink{
+    animation-name: shrink;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: forwards;
+}
+.menu_enlarge{
+    animation-name: enlarge;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: forwards;
+}
+.selection_button{
+    margin: auto;
+    width: 50%;
+    height: 10%;
+    margin-top: 30%;
+    position: relative;
+    background: linear-gradient(#aceeff,#000000);
+}
+@keyframes enlarge{
+    0%{
+        height: 0%;
+        width: 0%;
+        border: solid 0px black;
+    }
+    10%{
+        border: solid 3px black;
+    }
+    100%{
+        height: 100%;
+        width: 20%;
+        border: solid 3px black;
+    }
+}
+@keyframes shrink{
+    0%{
+        height: 100%;
+        width: 20%;
+        border: solid 3px black;
+    }
+    90%{
+        border: solid 0px black;
+    }
+    100%{
+        height: 0%;
+        width: 0%;
+        border: solid 0px black;
+    }
+}
+
 .row {
     --bs-gutter-x: 1.5rem;
     --bs-gutter-y: 0;
