--- a/hw2/styles.css
+++ b/hw2/styles.css
@@ -1,15 +1,19 @@
+html,body{
+    background: linear-gradient(rgba(196, 255, 204, 0.3),rgba(195, 248, 255, 0.3));
+}
 .top_section{
     width: 100%;
     height: 1.8cm;
-    background: linear-gradient(#aceeff, #000000);
+    background: linear-gradient(#def8ff, #5a5a5a);
     box-shadow: 1px 1px 2px gray;
     border: #413d52 2px solid;
 }
 .album_title{
-    font-size: 1.5cm;
+    font-size: 1.2cm;
     color: #ffffff;
     text-align: center;
     text-shadow: 1px 1px 2px gray;
+    border-radius: 15px;
 }
 .photo_section{
     width: 100%;
@@ -18,6 +22,7 @@
     background-color: rgba(202, 202, 202, 0.87);
     box-shadow: 1px 1px 2px gray;
     border: #413d52 2px solid;
+    border-radius: 15px;
 }
 .view_box{
     background-color: #beeec0a1;
@@ -30,6 +35,7 @@
     width: 80%;
     height: 100%;
     margin-left: 10%;
+    box-shadow: 1px 1px 2px gray;
 }
 .view_box:hover{
     background-color: #beeec0a1;
@@ -52,13 +58,14 @@
     margin-left: 5%;
     height: 160px;
     margin-top: 5%;
-    background: linear-gradient(#aceeff, #000000); 
+    background: linear-gradient(#def8ff, #5a5a5a); 
     box-shadow: 1px 1px 2px gray;
     border: #16151a 2px solid;
+    border-radius: 15px;
 }
 .photo_section_2:hover{
     width: 91%;
-    background: linear-gradient(#b4f0ff75, #0000007e);
+    background: linear-gradient(#b4f0ff75, #5a5a5a73);
 }
 .switch_button_left{
     width: 10%;
@@ -69,6 +76,7 @@
     background-color: white;
     position: absolute;
     display: block;
+    border-radius: 20px 0px 0px 20px;
 }
 .switch_button_right{
     width: 10%;
@@ -79,11 +87,12 @@
     background-color: white;
     position: absolute;
     display: block;
+    border-radius: 0px 20px 20px 0px;
 }
 .text_button{
     text-align: center;
 }
-.switch_button_left:hover, .switch_button_right, .text_button:hover{
+.switch_button_left:hover, .switch_button_right:hover, .text_button:hover{
     cursor: pointer;
 }
 .album_menu{
@@ -93,8 +102,6 @@
     border: solid 0px black;
     z-index: 9999;
     position: absolute;
-    flex-direction: column;
-    display: flex;
     overflow-y: auto;
 }
 .menu_shrink{
@@ -109,11 +116,12 @@
 }
 .selection_button{
     margin: auto;
-    width: 100%;
+    width: 50%;
     height: 10%;
-    margin-top: 30%;
+    margin-top: 5%;
     position: relative;
-    background: linear-gradient(#aceeff,#000000);
+    background: linear-gradient(#ffbacb,#5a5a5a);
+    border-radius: 10px;
 }
 @keyframes enlarge{
     0%{
@@ -125,14 +133,14 @@
         border: solid 3px black;
     }
     100%{
-        height: 100%;
+        height: 50%;
         width: 20%;
         border: solid 3px black;
     }
 }
 @keyframes shrink{
     0%{
-        height: 100%;
+        height: 50%;
         width: 20%;
         border: solid 3px black;
     }
