--- a/hw2/styles.css
+++ b/hw2/styles.css
@@ -4,16 +4,19 @@ html,body{
 .top_section{
     width: 100%;
     height: 1.8cm;
-    background: linear-gradient(#def8ff, #5a5a5a);
+    background: linear-gradient(#8d8d8d, #acacac);
     box-shadow: 1px 1px 2px gray;
-    border: #413d52 2px solid;
+    margin-top: 1%;
+    border-radius: 15px;
 }
 .album_title{
     font-size: 1.2cm;
     color: #ffffff;
     text-align: center;
     text-shadow: 1px 1px 2px gray;
-    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
 }
 .photo_section{
     width: 100%;
@@ -98,11 +101,11 @@ html,body{
 .album_menu{
     height: 0%;
     width: 0%;
-    background-color: white;
-    border: solid 0px black;
+    background: linear-gradient(rgb(63, 63, 63),#494444);
     z-index: 9999;
     position: absolute;
     overflow-y: auto;
+    border-radius: 10px;
 }
 .menu_shrink{
     animation-name: shrink;
