--- a/hw5/src/App.css
+++ b/hw5/src/App.css
@@ -14,15 +14,23 @@
   margin-left: 5%;
 }
 .calculator__button{
-  width: 50px;
-  height: 50px;
+  width: 100%;
+  height: 100%;
   margin: auto;
-  margin-top: 50%;
-  border: indigo 1px solid;
+  margin-top: 10%;
+  border: #282f31 1px solid;
   background-color: rgba(22,44,66,0.6);
   text-align: center;
+  font-size: 1cm;
+  color: aliceblue;
+}
+.calculator__button:hover{
+  cursor: pointer;
+  width: 105%;
+  height: 105%;
 }
 .row {
+  height: 12.5%;
   --bs-gutter-x: 1.5rem;
   --bs-gutter-y: 0;
   display: flex;
@@ -97,6 +105,9 @@
 
 .offset-md-1 {
   margin-left: 8.33333333%;
+}
+.offset-md-1-5 {
+  margin-left: 12.5%;
 }
 
 .offset-md-2 {
