--- a/hw5/src/App.css
+++ b/hw5/src/App.css
@@ -4,7 +4,19 @@
   height: 500px;
   margin-top: 1%;
   margin-left: 35%;
+  box-shadow: #000000 1px 1px 2px;
   position: absolute;
+}
+@media(max-width:767px){
+  .calculator__mainBody{
+    background-color: rgba(35, 37, 54, 0.5);
+    width: 70%;
+    height: 500px;
+    margin-top: 1%;
+    margin-left: 15%;
+    box-shadow: #000000 2px 2px 2px;
+    position: absolute;
+  }
 }
 .calculator__displayWindow{
   background-color: rgba(54, 71, 61, 0.7);
@@ -22,13 +34,36 @@
   background-color: rgba(22,44,66,0.6);
   text-align: center;
   font-size: 1cm;
+  box-shadow: #000000 1px 1px 2px;
+  color: aliceblue;
+}
+.calculator__powerButton{
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  margin-top: 10%;
+  background-color: rgba(54, 71, 61, 0.8);
+  text-align: center;
+  font-size: 1cm;
   color: aliceblue;
 }
 .calculator__button:hover{
   cursor: pointer;
-  width: 105%;
-  height: 105%;
+  width: 103%;
+  height: 103%;
 }
+.calculator__powerButton:hover{
+  cursor: pointer;
+}
+.calculator__functionBar{
+  background-color: rgba(35, 37, 54, 0.5);
+  width: 10%;
+  height: 500px;
+  margin-top: 1%;
+  margin-left: 35%;
+  position: relative;
+}
+
 .row {
   height: 12.5%;
   --bs-gutter-x: 1.5rem;
