--- a/hw6/frontend/src/App.css
+++ b/hw6/frontend/src/App.css
@@ -42,6 +42,11 @@ html,body{
   width: 10%;
   height: 100px;
 }
+.guessGame__status{
+  text-align: center;
+  font-size: 1cm;
+  font-family: 'Courier New', Courier, monospace;
+}
 
 .row {
   --bs-gutter-x: 1.5rem;
